--- a/aae_mobile/ios/Flutter/Generated.xcconfig
+++ b/aae_mobile/ios/Flutter/Generated.xcconfig
@@ -1,11 +1,10 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/681016/dev/flutter
-FLUTTER_APPLICATION_PATH=/Users/681016/dev/essentials/ghe/essentials-ui/aae_mobile
-FLUTTER_TARGET=/Users/681016/dev/essentials/ghe/essentials-ui/aae_mobile/lib/main.dart
+FLUTTER_ROOT=/Users/200989/dev/flutter
+FLUTTER_APPLICATION_PATH=/Users/200989/dev_projects/american-essentials/essentials-ui/aae_mobile
+FLUTTER_TARGET=lib/main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build/ios
 OTHER_LDFLAGS=$(inherited) -framework Flutter
-FLUTTER_FRAMEWORK_DIR=/Users/681016/dev/flutter/bin/cache/artifacts/engine/ios
+FLUTTER_FRAMEWORK_DIR=/Users/200989/dev/flutter/bin/cache/artifacts/engine/ios-release
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
-TRACK_WIDGET_CREATION=true
