--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_secure_storage: ^3.3.1+1
   platform: ^2.2.1
   flutter_widgets: ^0.1.1
+  webview_flutter: ^0.3.20
+  flutter_html: ^0.11.1
   flutter:
     sdk: flutter
 
