--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_widgets: ^0.1.1
   webview_flutter: ^0.3.20
   flutter_html: ^0.11.1
+  gradient_app_bar: ^0.1.3
   flutter:
     sdk: flutter
 
