--- a/aae_mobile/ios/Podfile
+++ b/aae_mobile/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '9.0'
+ platform :ios, '9.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -78,6 +78,18 @@ target 'Runner' do
   end
 end
 
+
+# add the Firebase pod for Google Analytics
+pod 'Firebase/Analytics'
+
+# add pods for any other desired Firebase products
+# https://firebase.google.com/docs/ios/setup#available-pods
+
+# Add the Firebase Performance
+pod 'Firebase/Performance'
+
+# Add Crashlytics
+pod 'Firebase/Crashlytics'
 # Prevent Cocoapods from embedding a second Flutter framework and causing an error with the new Xcode build system.
 install! 'cocoapods', :disable_input_output_paths => true
 
