--- a/aae_mobile/.gitignore
+++ b/aae_mobile/.gitignore
@@ -37,6 +37,10 @@
 *.g.dart
 *.inject.dart
 .flutter-plugins-dependencies
+.properties
+.sh
+.xcconfig
+
 
 # Android related
 **/android/**/gradle-wrapper.jar
