--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -106,6 +106,12 @@ flutter:
           style: italic
         - asset: assets/fonts/AmericanSans-Bold.ttf
           weight: 700
+    - family: AmericanSansMedium
+      fonts:
+        - asset: assets/fonts/AmericanSans-Medium.otf
     - family: AaeIcons
       fonts:
         - asset: assets/fonts/AaeIcons.ttf
+    - family: AaeIconsv4
+      fonts:
+        - asset: assets/fonts/american-icons-v4.ttf
