Fixed build failures
Removed unused files, added widgets, and fixed formatting


Added some files to git ignore


Created travel full button widget


Removed several unused imports and combined tools and trips widget


Added icon/font files Modified the travel api to return trip objects


Modified verbiage


reverted pubspec changes


added pubspec changes back in

--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/static_records/RecognitionHistory.json
     - assets/static_records/image.jpeg
     - assets/common/sign_in_background.png
+    - assets/static_records/Trips.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -105,6 +106,12 @@ flutter:
           style: italic
         - asset: assets/fonts/AmericanSans-Bold.ttf
           weight: 700
+    - family: AmericanSansMedium
+      fonts:
+        - asset: assets/fonts/AmericanSans-Medium.otf
     - family: AaeIcons
       fonts:
         - asset: assets/fonts/AaeIcons.ttf
+    - family: AaeIconsv4
+      fonts:
+        - asset: assets/fonts/american-icons-v4.ttf
