updated ipa location info.. this is where the ipa file needs to be stored (#11)

--- a/aae_mobile/ios/Runner.plist
+++ b/aae_mobile/ios/Runner.plist
@@ -11,7 +11,7 @@
                                         <key>kind</key>
                                         <string>software-package</string>
                                         <key>url</key>
-                                        <string>https://department.jetnet.aa.com/ITSSvcMgmt/aae_mobile.html/Runner.ipa</string>
+                                        <string>https://image.jetnet.aa.com/imageserver45/AE/Runner.ipa</string>
                                 </dict>
                         </array>
                         <key>metadata</key>
