--- a/aae_mobile/android/local.properties
+++ b/aae_mobile/android/local.properties
@@ -1,6 +1,7 @@
+sdk.dir=/Users/200989/Library/Android/sdk
+flutter.sdk=/Users/200989/dev/flutter
 sdk.dir=/Users/nagarajhiremath/Library/Android/sdk
 flutter.sdk=/Users/nagarajhiremath/development/flutter
 flutter.buildMode=release
-=======
 flutter.versionName=1.0.0
 flutter.versionCode=1
