--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   webview_flutter: ^0.3.20
   flutter_html: ^0.11.1
   gradient_app_bar: ^0.1.3
+  flutter_keyboard_visibility: ^0.7.0
+  keyboard_avoider: ^0.1.2
   flutter:
     sdk: flutter
 
