US1286453: Features/calendar (#14)
* Auto stash before merge of "features/home-screen" and "development"

* Home screen and menu layout updates

* Added placeholder Travel module, updated formatting for bottom menu and stocks, updated formatting for home page news

* Additional layout and color tweaks

* Finished menu routing update

* Menu layout and subpage menu tweaks.

* Home screen UI and travel module updates

* Updated dependencies

* (no branch): Auto stash before checking out "HEAD"

* Calendar page layout updates mostly complete

* updates

* Calendar event dots and number colors updated to reflect current day

* Calendar layout adjustments completed. Beginning layout update of calendar detail view. Updated bottom nav link from 'Travel' to 'Trips'

* Event detail page layout updates.

* Event view detail page finished, typography styles updated.

* Added new AAIcons font

* Updated icon paths

* Removed "..." and added "."

--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -110,3 +110,6 @@ flutter:
     - family: AaeIcons
       fonts:
         - asset: assets/fonts/AaeIcons.ttf
+    - family: AaeIconsv4
+      fonts:
+        - asset: assets/fonts/american-icons-v4.ttf
