Printing jwt token on the Login view page

--- a/aae_mobile/android/app/src/main/AndroidManifest.xml
+++ b/aae_mobile/android/app/src/main/AndroidManifest.xml
@@ -37,6 +37,13 @@
                 <data
                     android:scheme="aae" />
             </intent-filter>
+            <!-- App Links -->
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="https" android:host="notused" />
+            </intent-filter>
         </activity>
     </application>
 </manifest>
