--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.5.0 <3.0.0"
 
 dependencies:
+  uni_links: ^0.2.0
+  corsac_jwt: ^0.1.2
   mockito: ^4.1.1
   html: ^0.14.0+3
   shared_preferences: ^0.5.6+3
