Updated with new page ui

--- a/aae_mobile/android/app/src/main/AndroidManifest.xml
+++ b/aae_mobile/android/app/src/main/AndroidManifest.xml
@@ -30,12 +30,12 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <!-- Deep links -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.action.BROWSABLE" />
-                <data
-                    android:scheme="aae" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="aae" android:host="www.aa.com" />
             </intent-filter>
             <!-- App Links -->
             <intent-filter android:autoVerify="true">
