--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.5.0 <3.0.0"
 
 dependencies:
+  flutter_webview_plugin: ^0.3.11
   uni_links: ^0.2.0
   corsac_jwt: ^0.1.2
   mockito: ^4.1.1
