--- a/aae_mobile/android/app/src/main/AndroidManifest.xml
+++ b/aae_mobile/android/app/src/main/AndroidManifest.xml
@@ -44,6 +44,18 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="https" android:host="notused" />
             </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="https" android:host="smlogin.stage.aa.com" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="https" android:host="idpstage.aa.com" />
+            </intent-filter>
         </activity>
     </application>
 </manifest>
