--- a/aae_mobile/ios/Runner/Info.plist
+++ b/aae_mobile/ios/Runner/Info.plist
@@ -28,6 +28,41 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Viewer</string>
+            <key>CFBundleURLName</key>
+            <array>
+                <string>www.aa.com</string>
+                <string>smlogin.stage.aa.com</string>
+                <string>idpstage.aa.com</string>
+                <string>notused</string>
+            </array>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>aae</string>
+                <string>https</string>
+            </array>
+        </dict>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLName</key>
+            <array>
+                <string>www.aa.com</string>
+                <string>smlogin.stage.aa.com</string>
+                <string>idpstage.aa.com</string>
+                <string>notused</string>
+            </array>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>aae</string>
+                <string>https</string>
+            </array>
+        </dict>
+    </array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
