--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -33,9 +33,10 @@ dependencies:
   platform: ^2.2.1
   flutter_widgets: ^0.1.1
   webview_flutter: ^0.3.20
-  flutter_html: ^0.11.1
+  flutter_html: ^1.0.0-pre.1
   gradient_app_bar: ^0.1.3
   cached_network_image: ^2.2.0+1
+  flutter_advanced_networkimage: ^0.7.0
   flutter_keyboard_visibility: ^0.7.0
   keyboard_avoider: ^0.1.2
   flutter_svg: ^0.18.0
@@ -119,4 +120,4 @@ flutter:
         - asset: assets/fonts/AaeIcons.ttf
     - family: AaeIconsv4
       fonts:
-        - asset: assets/fonts/AaeIcons.ttf
+        - asset: assets/fonts/american-icons-v4.ttf
