--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -32,10 +32,9 @@ dependencies:
   platform: ^2.2.1
   flutter_widgets: ^0.1.1
   webview_flutter: ^0.3.20
-  flutter_html: ^1.0.0-pre.1
+  flutter_html: ^1.0.2
   gradient_app_bar: ^0.1.3
   cached_network_image: ^2.2.0+1
-  flutter_advanced_networkimage: ^0.7.0
   flutter_keyboard_visibility: ^0.7.0
   keyboard_avoider: ^0.1.2
   flutter_svg: ^0.18.0
@@ -46,9 +45,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the Cupertino Icons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
-dependency_overrides:
-  flutter_svg: ^0.17.4
 
 dev_dependencies:
   built_value: ^7.1.0
