--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -24,14 +24,14 @@ dependencies:
   shared_preferences: ^0.5.6+3
   built_value_generator: ^7.1.0
   built_collection: ^4.3.2
-  url_launcher: ^5.4.2
+  url_launcher: ^5.5.0
   intl: ^0.16.1
   logging: ^0.11.4
   local_auth: ^0.6.1+3
   flutter_secure_storage: ^3.3.1+1
   platform: ^2.2.1
   flutter_widgets: ^0.1.1
-  webview_flutter: ^0.3.20
+  webview_flutter: ^0.3.22+1
   flutter_html: ^1.0.2
   gradient_app_bar: ^0.1.3
   cached_network_image: ^2.2.0+1
