--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   html: ^0.14.0+3
   shared_preferences: ^0.5.6+3
   built_value_generator: ^7.1.0
+  date_picker_timeline: ^1.2.0
   built_collection: ^4.3.2
   url_launcher: ^5.5.0
   intl: ^0.16.1
