--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   keyboard_avoider: ^0.1.2
   flutter_svg: ^0.18.0
   recase: ^3.0.0
+  get: ^3.12.1
   flutter:
     sdk: flutter
 
