--- a/aae_mobile/android/app/build.gradle
+++ b/aae_mobile/android/app/build.gradle
@@ -29,7 +29,8 @@ apply plugin: 'com.google.gms.google-services'
 
 // Apply the Performance Monitoring plugin
 apply plugin: 'com.google.firebase.firebase-perf'
-
+// Apply the Crashlytics Gradle plugin
+//apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 28
@@ -50,6 +51,9 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        multiDexEnabled true
+
     }
 
     buildTypes {
@@ -66,16 +70,25 @@ flutter {
 }
 
 dependencies {
+//	classpath 'com.android.tools.build:gradle:3.1.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    // add the Firebase SDK for Google Analytics
-    implementation 'com.google.firebase:firebase-analytics:17.4.2'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+	// add the Firebase SDK for Google Analytics
+//    implementation 'com.google.firebase:firebase-analytics:17.4.2'
+    // Recommended: Add the Firebase SDK for Google Analytics.
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
     // add SDKs for any other desired Firebase products
     // https://firebase.google.com/docs/android/setup#available-libraries
-
     // Add the dependency for the Performance Monitoring library
-    implementation 'com.google.firebase:firebase-perf:19.0.7'
+    implementation 'com.google.firebase:firebase-perf:19.0.8'
+    // Add the Firebase Crashlytics SDK.
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
 }
+
+// Apply the Crashlytics Gradle plugin
+apply plugin: 'com.google.firebase.crashlytics'
