--- a/aae_mobile/android/build.gradle
+++ b/aae_mobile/android/build.gradle
@@ -6,15 +6,18 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
         // To benefit from the latest Performance Monitoring plugin features,
         // update your Android Gradle Plugin dependency to at least v3.4.0
-        classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath 'com.google.gms:google-services:4.3.3'
-        // Add the dependency for the Performance Monitoring plugin
-        classpath 'com.google.firebase:perf-plugin:1.3.1'  // Performance Monitoring plugin
+        	classpath 'com.android.tools.build:gradle:4.0.1'
+        	classpath 'com.google.gms:google-services:4.3.3'
 
+        // Add the dependency for the Performance Monitoring plugin
+        	classpath 'com.google.firebase:perf-plugin:1.3.1'  // Performance Monitoring plugin
+	 // Add the Crashlytics Gradle plugin.
+        	classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
     }
 }
 
