--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   get: ^3.12.1
   logger: ^0.9.4
   expandable: ^4.1.4
+  slider_button: ^0.6.0
+  custom_switch_button: ^0.5.0
   flutter:
     sdk: flutter
 
