--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   keyboard_avoider: ^0.1.2
   flutter_svg: ^0.18.0
   recase: ^3.0.0
+  flutter_widget_from_html: ^0.5.1+3
   flutter:
     sdk: flutter
 
