--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -11,7 +11,7 @@ description: American Airlines - AA Essentials
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.5+1
+version: 1.0.6+1
 
 environment:
   sdk: ">=2.5.0 <3.0.0"
@@ -38,7 +38,9 @@ dependencies:
   flutter_keyboard_visibility: ^0.7.0
   keyboard_avoider: ^0.1.2
   flutter_svg: ^0.18.0
+  link: ^1.0.0
   recase: ^3.0.0
+  linkable: ^1.0.4
   flutter:
     sdk: flutter
 
