--- a/aae_mobile/ios/Podfile
+++ b/aae_mobile/ios/Podfile
@@ -33,6 +33,16 @@ target 'Runner' do
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
+# add the Firebase pod for Google Analytics
+pod 'Firebase/Analytics'
+# add pods for any other desired Firebase products
+### https://firebase.google.com/docs/ios/setup#available-pods
+# Add the Firebase Performance
+pod 'Firebase/Performance'
+# Add Crashlytics
+pod 'Firebase/Crashlytics'
+# Recommended: Add the Firebase pod for Google Analytics
+pod 'Firebase/Analytics'
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
