--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   linkable: ^1.0.4
   flutter:
     sdk: flutter
+  firebase_core: ^0.5.0
+  firebase_crashlytics: ^0.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the Cupertino Icons class for iOS style icons.
