Performance improvement for stock,d0, article page

--- a/aae_mobile/android/app/src/main/AndroidManifest.xml
+++ b/aae_mobile/android/app/src/main/AndroidManifest.xml
@@ -48,13 +48,13 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="https" android:host="smlogin.stage.aa.com" />
+                <data android:scheme="https" android:host="smlogin.aa.com" />
             </intent-filter>
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="https" android:host="idpstage.aa.com" />
+                <data android:scheme="https" android:host="idp.aa.com" />
             </intent-filter>
         </activity>
     </application>
