--- a/aae_mobile/ios/Podfile
+++ b/aae_mobile/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '11.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -28,24 +28,29 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
+  pod 'Firebase/Core'
+  # add the Firebase pod for Google Analytics
+  pod 'Firebase/Analytics'
+  # add pods for any other desired Firebase products
+  ### https://firebase.google.com/docs/ios/setup#available-pods
+  # Add the Firebase Performance
+  pod 'Firebase/Performance'
+  # Add Crashlytics
+  pod 'Firebase/Crashlytics'
   use_frameworks!
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
-# add the Firebase pod for Google Analytics
-pod 'Firebase/Analytics'
-# add pods for any other desired Firebase products
-### https://firebase.google.com/docs/ios/setup#available-pods
-# Add the Firebase Performance
-pod 'Firebase/Performance'
-# Add Crashlytics
-pod 'Firebase/Crashlytics'
-# Recommended: Add the Firebase pod for Google Analytics
-pod 'Firebase/Analytics'
 
-post_install do |installer|
-  installer.pods_project.targets.each do |target|
-    flutter_additional_ios_build_settings(target)
-  end
+
+
+post_install do |pi|
+    pi.pods_project.targets.each do |t|
+      flutter_additional_ios_build_settings(t)
+      t.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+      end
+    end
 end
+
