--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -18,7 +18,7 @@ environment:
 
 dependencies:
   flutter_webview_plugin: ^0.3.11
-  corsac_jwt: ^0.2.2
+  corsac_jwt: ^0.3.0
   mockito: ^4.1.1
   html: ^0.14.0+4
   shared_preferences: ^0.5.12+2
@@ -31,7 +31,7 @@ dependencies:
   flutter_secure_storage: ^3.3.5
   platform: ^2.2.1
   flutter_widgets: ^0.1.12
-  webview_flutter: ^0.3.22+1
+  webview_flutter: ^1.0.7
   flutter_html: ^1.0.2
   gradient_app_bar: ^0.1.3
   cached_network_image: ^2.2.0+1
@@ -45,12 +45,15 @@ dependencies:
   linkable: ^1.0.4
   flutter:
     sdk: flutter
-  firebase_core: ^0.5.0
-  firebase_crashlytics: ^0.2.0
+  firebase_core: ^0.5.2
+  firebase_crashlytics: ^0.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the Cupertino Icons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
+dependency_overrides:
+  webview_flutter: ^0.3.22+1
 
 dev_dependencies:
   built_value: ^7.1.0
