--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -41,8 +41,15 @@ dependencies:
   link: ^1.0.0
   recase: ^3.0.0
   date_picker_timeline: ^1.2.1
+  slider_button: ^0.6.0
+  expandable: ^4.1.4
+  custom_switch_button: ^0.5.0
+  custom_switch: ^0.0.1
+  flutter_switch: ^0.1.5
   flutter_widget_from_html: ^0.5.1+3
   linkable: ^1.0.4
+  date_format: ^1.0.9
+  dotted_line: ^2.0.2
   flutter:
     sdk: flutter
   firebase_core: ^0.5.2
