--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -17,7 +17,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter_webview_plugin: ^0.3.11
+  flutter_webview_plugin:
+    path: ./fwplugin
   corsac_jwt: ^0.3.0
   mockito: ^4.1.1
   html: ^0.14.0+4
