--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -117,17 +117,16 @@ flutter:
   fonts:
     - family: AmericanSans
       fonts:
-        - asset: assets/fonts/AmericanSans-Regular.ttf
-        - asset: assets/fonts/AmericanSans-Italic.ttf
-          style: italic
-        - asset: assets/fonts/AmericanSans-Bold.ttf
-          weight: 700
-    - family: AmericanSansMedium
-      fonts:
+        - asset: assets/fonts/AmericanSans-Light.otf
+        - asset: assets/fonts/AmericanSans-LightItalic.otf
+        - asset: assets/fonts/AmericanSans-Regular.otf
+        - asset: assets/fonts/AmericanSans-RegularItalic.otf
         - asset: assets/fonts/AmericanSans-Medium.otf
-    - family: AaeIcons
+        - asset: assets/fonts/AmericanSans-MediumItalic.otf
+        - asset: assets/fonts/AmericanSans-Bold.otf
+        - asset: assets/fonts/AmericanSans-BoldItalic.otf
+    - family: American Icons v4.6
       fonts:
-        - asset: assets/fonts/AaeIcons.ttf
-    - family: AaeIconsv4
-      fonts:
-        - asset: assets/fonts/american-icons-v4.ttf
+        - asset: assets/fonts/Americaniconsv4.6-Regular.otf
+
+
