--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -129,13 +129,21 @@ flutter:
         - asset: assets/fonts/AmericanSans-Italic.ttf
           style: italic
         - asset: assets/fonts/AmericanSans-Bold.ttf
-          weight: 700
+        - asset: assets/fonts/AmericanSans-BoldItalic.ttf
     - family: AmericanSansMedium
       fonts:
         - asset: assets/fonts/AmericanSans-Medium.otf
+        - asset: assets/fonts/AmericanSans-MediumItalic.otf
+          style: italic
+    - family: AmericanSansLight
+      fonts:
+        - asset: assets/fonts/AmericanSans-Light.ttf
+        - asset: assets/fonts/AmericanSans-LightItalic.ttf
+          style: italic
     - family: AaeIcons
       fonts:
         - asset: assets/fonts/AaeIcons.ttf
-    - family: AaeIconsv4
+    - family: AmericanIconsv4_6
       fonts:
-        - asset: assets/fonts/american-icons-v4.ttf
+        - asset: assets/fonts/AmericanIconsv4.6-Regular.otf
+
