--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   linkable: ^1.0.4
   date_format: ^1.0.9
   dotted_line: ^2.0.2
+  carousel_slider: ^3.0.0
+  qr_flutter: ^3.1.0
   flutter:
     sdk: flutter
   firebase_core: ^0.5.2
