--- a/aae_mobile/pubspec.yaml
+++ b/aae_mobile/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^0.5.2
   firebase_crashlytics: ^0.2.3
+  scroll_to_index: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the Cupertino Icons class for iOS style icons.
