--- a/aae_mobile/ios/Podfile
+++ b/aae_mobile/ios/Podfile
@@ -50,6 +50,8 @@ post_install do |pi|
       flutter_additional_ios_build_settings(t)
       t.build_configurations.each do |config|
         config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+#        config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'NO'
+        config.build_settings['CLANG_WARN_QUOTED_INCLUDE_IN_FRAMEWORK_HEADER'] = "NO"
       end
     end
 end
